# Giza

./: .gitattributes  .gitignore  Initial.ipynb  README.md  packages.txt  pyproject.toml  scrapetest copy.py  ticks.csv
.streamlit/: config.toml
Giza/: Initial.ipynb  Main Page.py  Main_Page.py  aggrid_formats.py  climbconstants.py  constants.py  df_archive  list_analytics.ipynb  long_strs.py  st_blend_functions.py  test.py  tick_route_functions.py  tick_route_handling.py  unique_route_functions.py  unique_route_handling.ipynb  unique_route_handling.py  user_send_analytics.ipynb
Giza/Archived_Datasets/Ticks/: Giza_ticks_200554494_amity-warme_2023-01-15
Giza/Archived_Datasets/ToDos/: Giza_todos_200554494_amity-warme_2023-01-15
Giza/Data_Archive/Ticks/: Expert Climber.pkl  Giza_ticks_109585594_kevin-patel_2023-01-15  Giza_ticks_200180658_brayden-l_2023-01-14
Giza/Data_Archive/ToDos/: Bishop Area.pkl  Black Canyon of the Gunnison.pkl  Eldorado Canyon.pkl  Giza_todos_200180658_brayden-l_2023-01-14  High Sierra.pkl  Index.pkl  Indian Creek.pkl  Joshua Tree.pkl  Lake Tahoe.pkl  Leavenworth.pkl  Mammoth Lakes.pkl  Moab Area.pkl  New River Gorge.pkl  Red River Gorge.pkl  Red Rock.pkl  Rifle.pkl  Rumney.pkl  Smith Rock.pkl  Squamish.pkl  Ten Sleep.pkl  The Needles.pkl  Tuolomne.pkl  Vedauwoo.pkl  Yosemite.pkl  Zion.pkl
Giza/pages/: 1_Scrape Hub.py  1_Scrape.py  2_Analysis.py  2_Route Analysis.py  2_Tick Analysis.py  4_About.py  Scrape Hub.py  Tick Analysis.py  To Do Analysis.py
