[tool.poetry]
name = "giza"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
seaborn = "^0.12.1"
plotly = "^5.11.0"
PyInputPlus = "^0.2.12"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
nltk = "^3.7"
nbformat = "^5.7.0"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
